force-app/main/default/objects/E__c/E__c.object-meta.xml
<CustomObject>
    <label>E</label>
    <nameField>
        <label>E Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>