force-app/main/default/objects/E__c/fields/DRel__c.field-meta.xml
<CustomField>
    <fullName>DRel__c</fullName>
    <label>D</label>
    <referenceTo>D__c</referenceTo>
    <relationshipLabel>E</relationshipLabel>
    <relationshipName>E</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>