force-app/main/default/objects/E__c/fields/ERE__c.field-meta.xml
<CustomField>
    <fullName>ERE__c</fullName>
    <label>C</label>
    <referenceTo>C__c</referenceTo>
    <relationshipLabel>E</relationshipLabel>
    <relationshipName>E</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>