force-app/main/default/objects/E__c/fields/EREL__c.field-meta.xml
<CustomField>
    <fullName>EREL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A</label>
    <referenceTo>A__c</referenceTo>
    <relationshipLabel>E</relationshipLabel>
    <relationshipName>E</relationshipName>
    <type>Lookup</type>
</CustomField>